--- a/antibruteforce/.travis.yml
+++ b/antibruteforce/.travis.yml
@@ -3,8 +3,7 @@ language: go
 env: GO111MODULE=on GOFLAGS='-mod vendor'
 
 go:
-  - 1.12.x
-  - 1.13.x
+  - 1.13.4
 
 git:
   depth: 1
@@ -14,6 +13,10 @@ install: true
 notifications:
   email: false
 
+before_script:
+  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+
 script:
   - go fmt 
   - go vet
+  - golangci-lint run
