--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
   email: false
 
 before_script:
-  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
 
 script:
   - go fmt 
