--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ notifications:
   email: false
 
 before_script:
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.6
 
 script:
+  - cd antibruteforce
   - golangci-lint run --enable-all
